change page titles

--- a/pages/foods.html
+++ b/pages/foods.html
@@ -21,7 +21,7 @@
         </div>
     </nav>
     <section id="food" class="container">
-        <h2>Sri Lankan Sweets</h2>
+        <h2>Sri Lankan Foods</h2>
 
         <div class="grid">
             <div class="item">
